Complex update of the rewriting engine/MemTRS stdlib
Rewriting engine:
- Added SMT support for the GET command - Select

Improved rewriting engine performance:
- removed error messages with string concatenation from the "match" method.
- Reduced the bottlenecks by using Streams for subterms and used Virtual Threads for a parallel reduction step.

MemTRS algorithms:
- Added the binary search implementation (terms version and memory version)

Tests:
- Added integration tests for binary search
- Added integration tests for the HeapSort